product findById Event creating

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -64,7 +64,7 @@
         for(let i = 0 ; i < modifyButtons.length ; i++){
             modifyButtons[i].addEventListener("click" , function(){
                 const productId = this.getAttribute("data-product-id");
-                // alert(`點擊的productID: ${productId}`);
+                alert(`點擊的productID: ${productId}`);
 
             })
         }
