product findById Event creating 14 Modify FrontEnd update-img-Btn ok

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 </table>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="/js/indexProduct.js"></script>
+<script src="/js/index/ProductCreateModifyEvent.js"></script>
 
 </body>
 </html>
