product findById Event creating 15 Modify FrontEnd update-img-Btn css & js

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -32,3 +32,10 @@ thead tr {
     background-color: white;
     color: black;
 }
+
+.product-img-change-btn{
+    background: #ff9696;
+    border: 0px;
+    border-radius: 25px;
+    color: white;
+}
