product updata input disabled data demo 4

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -44,6 +44,11 @@ thead tr {
     color: white;
 }
 
+.productModify-Btn[disabled] {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 /* 修改 */
 
 .modify-input{
