product pageaction ok

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -2,12 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/index.css}">
     <!-- 引入Bootstrap样式 -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-
+        *{
+            padding: 0;
+            margin: 0;
+        }
+       nav{
+           margin-left: 50%;
+           transform: translate(-50%, -50%);
+       }
     </style>
 
 </head>
