product pageaction ok

--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -11,14 +11,46 @@
     <!-- 引入Bootstrap样式 -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        *{
+        .pagination {
+            margin-top: 20px;
+        }
+
+        .pagination ul {
+            list-style-type: none;
             padding: 0;
             margin: 0;
         }
-       nav{
-           margin-left: 50%;
-           transform: translate(-50%, -50%);
-       }
+
+        .pagination li {
+            display: inline;
+            margin-right: 5px;
+        }
+
+        .pagination li a {
+            padding: 8px 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            text-decoration: none;
+            color: #333;
+            background-color: #fff;
+        }
+
+        .pagination li a:hover {
+            background-color: #f2f2f2;
+        }
+
+        .pagination li.active a {
+            background-color: #4caf50;
+            color: white;
+        }
+
+        .pagination li.disabled a {
+            pointer-events: none;
+            cursor: default;
+            color: #ccc;
+        }
+
+
     </style>
 
 </head>
@@ -65,21 +97,28 @@
 
     </tbody>
 </table>
-<!-- 分頁導航 -->
 
+<!-- 分頁導航 -->
 <nav aria-label="Page navigation">
-    <ul class="pagination">
-        <li class="page-item" th:if="${products.hasPrevious()}">
-            <a class="page-link" th:href="@{|?page=${products.number - 1}|}">上一頁</a>
+    <ul class="pagination justify-content-center">
+        <li class="page-item disabled" th:if="${!products.first}">
+            <a class="page-link" href="#" aria-label="Previous" disabled>
+                <span aria-hidden="true">&laquo;</span>
+            </a>
         </li>
-        <li class="page-item" th:each="i : ${#numbers.sequence(0, products.totalPages - 1)}">
-            <a class="page-link" th:href="@{|?page=${i}|}" th:text="${i + 1}">1</a>
+        <li class="page-item" th:each="i : ${#numbers.sequence(0, products.totalPages - 1)}"
+            th:class="${i eq products.number} ? 'active' : ''">
+            <a class="page-link" th:href="@{|?page=${i}|}" th:text="${i + 1}"></a>
         </li>
-        <li class="page-item" th:if="${products.hasNext()}">
-            <a class="page-link" th:href="@{|?page=${products.number + 1}|}">下一頁</a>
+        <li class="page-item disabled" th:if="${!products.last}">
+            <a class="page-link" href="#" aria-label="Next" disabled>
+                <span aria-hidden="true">&raquo;</span>
+            </a>
         </li>
     </ul>
 </nav>
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
